v13c: force Fig 2 placement directly after Remark 4.10 with [H]

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -700,7 +700,7 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
   dynamically inaccessible to practical optimization trajectories.
 \end{remark}
 
-\begin{figure}[b!]
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig5_spectral_density.pdf}
 \caption[Hessian spectral density]{Empirical spectral density of the Hessian eigenvalues at critical points for varying $\gamma$ with $\delta = 1$, $n = 100$. As $\gamma$ increases through the critical ratio $\gamma^\star = 4/5$, the spectral support shifts rightward and the gap opens, consistent with the predicted spectral phase transition.}
